--- a/saving_app (pertemuan 6)/savingapps/pubspec.yaml
+++ b/saving_app (pertemuan 6)/savingapps/pubspec.yaml
@@ -60,15 +60,8 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-  - assets/images/ob-money.png
-  - assets/icons/home.png
-  - assets/icons/portofolio.png
-  - assets/icons/support.png
-  - assets/icons/profile.png
-  - assets/images/user-img.png
-  - assets/images/bg-container.png
-  - assets/icons/save.png
-  - assets/icons/pay.png
+  - assets/images/
+  - assets/icons/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
