--- a/firebase_auth (Pertemuan 9)/pertemuan_9/pubspec.yaml
+++ b/firebase_auth (Pertemuan 9)/pertemuan_9/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^2.30.1
   google_sign_in: ^6.2.1
+  cloud_firestore: ^4.17.5
 
 
 dev_dependencies:
